force-app/main/default/objects/Opportunity/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Opportunity.Agency__c - Wrong account type or hierarchy</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.Network__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Agency)</relationshipLabel>
    <relationshipName>Opportunities_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>