force-app/main/default/objects/Opportunity/fields/applicationType__c.field-meta.xml
<CustomField>
    <fullName>applicationType__c</fullName>
    <label>Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>