force-app/main/default/objects/Opportunity/fields/automationMessage__c.field-meta.xml
<CustomField>
    <fullName>automationMessage__c</fullName>
    <label>Automation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>