force-app/main/default/objects/Opportunity/fields/BLG_Campaign_Manual__c.field-meta.xml
<CustomField>
    <fullName>BLG_Campaign_Manual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BLG Campaign Manual</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BLG_Campaign__c.Type_of_Campaign__c</field>
            <operation>equals</operation>
            <value>Create lead/manual</value>
        </filterItems>
        <filterItems>
            <field>BLG_Campaign__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BLG_Campaign__c</referenceTo>
    <relationshipLabel>Opportunities (BLG Campaign Manual)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>