force-app/main/default/objects/Opportunity/fields/Bond_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Bond_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bond Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Bond Opportunity)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>