force-app/main/default/objects/Opportunity/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Opportunity.Branch__c - Wrong account type or hierarchy</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Real Estate Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Branch)</relationshipLabel>
    <relationshipName>Opportunities_Branch</relationshipName>
    <type>Lookup</type>
</CustomField>