force-app/main/default/objects/Opportunity/fields/CommissionEntityId__c.field-meta.xml
<CustomField>
    <fullName>CommissionEntityId__c</fullName>
    <label>CommissionEntityId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>