force-app/main/default/objects/Opportunity/fields/developmentName__c.field-meta.xml
<CustomField>
    <fullName>developmentName__c</fullName>
    <label>Development Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>