force-app/main/default/objects/Opportunity/fields/DigiApp_Link__c.field-meta.xml
<CustomField>
    <fullName>DigiApp_Link__c</fullName>
    <formula>Owner.Contact.DigiApp_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DigiApp Link</label>
    <type>Text</type>
</CustomField>