force-app/main/default/objects/Opportunity/fields/DMS_No__c.field-meta.xml
<CustomField>
    <fullName>DMS_No__c</fullName>
    <externalId>true</externalId>
    <label>DMS No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>