force-app/main/default/objects/Opportunity/fields/Domain_Id__c.field-meta.xml
<CustomField>
    <fullName>Domain_Id__c</fullName>
    <externalId>true</externalId>
    <label>Domain Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>