force-app/main/default/objects/Opportunity/fields/emailSendTrigger__c.field-meta.xml
<CustomField>
    <fullName>emailSendTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>emailSendTrigger</label>
    <type>Checkbox</type>
</CustomField>