force-app/main/default/objects/Opportunity/fields/Is_OTP_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_OTP_Received__c</fullName>
    <formula>IF(ISBLANK(OTP_Received_Date_Time__c ), FALSE, TRUE)</formula>
    <label>Is OTP Received?</label>
    <type>Checkbox</type>
</CustomField>