force-app/main/default/objects/Opportunity/fields/is_PA_Converted__c.field-meta.xml
<CustomField>
    <fullName>is_PA_Converted__c</fullName>
    <formula>IF( CONTAINS( TEXT(Status__c) , &quot;Issued&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is PA Converted?</label>
    <type>Checkbox</type>
</CustomField>