force-app/main/default/objects/Opportunity/fields/ISPA_Issued__c.field-meta.xml
<CustomField>
    <fullName>ISPA_Issued__c</fullName>
    <description>Check to see if PA has been issued at least once.</description>
    <formula>IF(ISBLANK( PA_Issued_Date_Time__c ), false, true)</formula>
    <label>Is PA Issued</label>
    <type>Checkbox</type>
</CustomField>