force-app/main/default/objects/Opportunity/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Applicant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LoanApplicant.Is_Main_Applicant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>LoanApplicantID</relationshipName>
    <type>Lookup</type>
</CustomField>