force-app/main/default/objects/Opportunity/fields/Main_Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>Main_Applicant_ID__c</fullName>
    <formula>Account.Identification_Number__c</formula>
    <label>Main Applicant ID</label>
    <type>Text</type>
</CustomField>