force-app/main/default/objects/Opportunity/fields/MC_Counter_NoOTPReceived__c.field-meta.xml
<CustomField>
    <fullName>MC_Counter_NoOTPReceived__c</fullName>
    <label>MC Counter NoOTPReceived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>