force-app/main/default/objects/Opportunity/fields/MC_Counter_Nurture__c.field-meta.xml
<CustomField>
    <fullName>MC_Counter_Nurture__c</fullName>
    <label>MC Counter Nurture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>