force-app/main/default/objects/Opportunity/fields/MC_Previous_Opportunity_Email__c.field-meta.xml
<CustomField>
    <fullName>MC_Previous_Opportunity_Email__c</fullName>
    <label>MC Previous Opportunity Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>