force-app/main/default/objects/Opportunity/fields/MC_Previous_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>MC_Previous_Opportunity_Owner__c</fullName>
    <label>MC Previous Opportunity Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>