force-app/main/default/objects/Opportunity/fields/Navigation_Link__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;Navigate to Opportunity&quot; , &apos;_blank&apos;)</formula>
    <label>Navigation Link</label>
    <type>Text</type>
</CustomField>