force-app/main/default/objects/Opportunity/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Opportunity.Network__c - Wrong account type</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Real Estate Network</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Network)</relationshipLabel>
    <relationshipName>Opportunities_Network</relationshipName>
    <type>Lookup</type>
</CustomField>