force-app/main/default/objects/Opportunity/fields/noAgentClassification__c.field-meta.xml
<CustomField>
    <fullName>noAgentClassification__c</fullName>
    <label>No Agent Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Auctioneer</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
                <label>Private Sale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>