force-app/main/default/objects/Opportunity/fields/Online_or_Offline__c.field-meta.xml
<CustomField>
    <fullName>Online_or_Offline__c</fullName>
    <formula>CASE(BLG_Campaign__r.Online_Offline__c,
  &quot;Online&quot;, &quot;Online&quot;,
  &quot;Offline&quot;, &quot;Offline&quot;,
  &quot;Offline&quot;
)</formula>
    <label>Online or Offline</label>
    <type>Text</type>
</CustomField>