force-app/main/default/objects/Opportunity/fields/OTP_Expiry_Date__c.field-meta.xml
<CustomField>
        <fullName>OTP_Expiry_Date__c</fullName>
        <label>OTP Expiry Date</label>
        <type>Date</type>
</CustomField>