force-app/main/default/objects/Opportunity/fields/OTP_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OTP_Received_Date_Time__c</fullName>
    <label>OTP Received Date/Time</label>
    <type>DateTime</type>
</CustomField>