force-app/main/default/objects/Opportunity/fields/relatedFilesIds__c.field-meta.xml
<CustomField>
    <fullName>relatedFilesIds__c</fullName>
    <label>Related Files Ids</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>