force-app/main/default/objects/Opportunity/fields/SLA_Flag__c.field-meta.xml
<CustomField>
    <fullName>SLA_Flag__c</fullName>
    <formula>IF(SLA_Remaining__c &gt; 0 || SLA_Remaining_Duration__c = &apos;Achieved within SLA&apos; ||  ISPICKVAL(Status__c, &apos;OTP Received&apos;),
 IMAGE( &quot;/resource/1655991777000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&quot;, &quot;Green&quot;),  
		IMAGE( &quot;/resource/1655991777000/GraphicsPackNew/fatcow/farmfresh/16/flag_red.png&quot;, &quot;Red&quot;)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Flag</label>
    <type>Text</type>
</CustomField>