force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General enquiry</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Not interested - not buying</fullName>
            </value>
            <value>
                <fullName>Not interested - poor service - Direct</fullName>
            </value>
            <value>
                <fullName>Not interested - poor service - Region</fullName>
            </value>
            <value>
                <fullName>Not interested - browsing</fullName>
            </value>
            <value>
                <fullName>Not interested - process</fullName>
            </value>
            <value>
                <fullName>Not interested - poor service - Insurance</fullName>
            </value>
            <value>
                <fullName>Not interested - renting</fullName>
            </value>
            <value>
                <fullName>Already submitted to bank(s)</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Submitted to another originator</fullName>
            </value>
            <value>
                <fullName>Dealing with another region</fullName>
            </value>
            <value>
                <fullName>Further loan - FNB</fullName>
            </value>
            <value>
                <fullName>Complaint - Insurance</fullName>
            </value>
            <value>
                <fullName>Complaint - POPI</fullName>
            </value>
            <value>
                <fullName>Complaint - Direct</fullName>
            </value>
            <value>
                <fullName>Complaint - Region</fullName>
            </value>
            <value>
                <fullName>Complaint - Other</fullName>
            </value>
            <value>
                <fullName>Transfer out - Head office</fullName>
            </value>
            <value>
                <fullName>Transfer out - Insurance</fullName>
            </value>
            <value>
                <fullName>Transfer out - Region - NW</fullName>
            </value>
            <value>
                <fullName>Transfer out - Region - SE</fullName>
            </value>
            <value>
                <fullName>Transfer out - Region - WC</fullName>
            </value>
            <value>
                <fullName>Transfer out - Region - KZN</fullName>
            </value>
            <value>
                <fullName>Transfer out - Region - PTA</fullName>
            </value>
            <value>
                <fullName>Transfer out - Region - FS</fullName>
            </value>
            <value>
                <fullName>Transfer out - Region - EC</fullName>
            </value>
            <value>
                <fullName>Transfer out - Developments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>