force-app/main/default/objects/Opportunity/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted To Bank</fullName>
            </value>
            <value>
                <fullName>Formal Grant</fullName>
            </value>
            <value>
                <fullName>Instructions Received</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>