force-app/main/default/objects/Opportunity/fields/Template_Selection__c.field-meta.xml
<CustomField>
    <fullName>Template_Selection__c</fullName>
    <label>Template Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PA - no answer</fullName>
            </value>
            <value>
                <fullName>PA - sending consent form (spoke to client)</fullName>
            </value>
            <value>
                <fullName>Consent form reminder - follow up</fullName>
            </value>
            <value>
                <fullName>Credit check positive - requesting docs to complete PA (Documents Required)</fullName>
            </value>
            <value>
                <fullName>Poor credit - post conversation</fullName>
            </value>
            <value>
                <fullName>PA requested - docs follow up</fullName>
            </value>
            <value>
                <fullName>PA issued - awaiting OTP (attach PA certificate)</fullName>
            </value>
            <value>
                <fullName>FHB PA - no answer</fullName>
            </value>
            <value>
                <fullName>FHB PA - sending consent form (spoke to client)</fullName>
            </value>
            <value>
                <fullName>FHB Consent form reminder - follow up</fullName>
            </value>
            <value>
                <fullName>FHB Credit check positive - requesting docs to complete PA (Documents Required)</fullName>
            </value>
            <value>
                <fullName>FHB Poor credit - post conversation</fullName>
            </value>
            <value>
                <fullName>FHB PA requested - docs follow up</fullName>
            </value>
            <value>
                <fullName>FHB PA issued - awaiting OTP (attach PA certificate)</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Awaiting OTP (No Answer)</fullName>
            </value>
            <value>
                <fullName>Awaiting OTP (Spoke to client)</fullName>
            </value>
            <value>
                <fullName>Awaiting OTP (Follow-up)</fullName>
            </value>
            <value>
                <fullName>Assign to expert Home Loan Consultant (No Answer)</fullName>
            </value>
            <value>
                <fullName>Assign to expert Home Loan Consultant (Spoke to client)</fullName>
            </value>
            <value>
                <fullName>FHB Awaiting OTP (No Answer)</fullName>
            </value>
            <value>
                <fullName>FHB Awaiting OTP (Spoke to client)</fullName>
            </value>
            <value>
                <fullName>FHB Awaiting OTP (Follow-up)</fullName>
            </value>
            <value>
                <fullName>FHB Assign to expert Home Loan Consultant (No Answer)</fullName>
            </value>
            <value>
                <fullName>FHB Assign to expert Home Loan Consultant (Spoke to client)</fullName>
            </value>
            <value>
                <fullName>Send DigiApp Link</fullName>
            </value>
            <value>
                <fullName>Send DigiApp Link Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>