force-app/main/default/objects/Opportunity/fields/Unregistered_Agent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Agent_Last_Name__c</fullName>
    <label>Unregistered Agent Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>