force-app/main/default/objects/Opportunity/fields/Unregistered_Agent_s_Agency__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Agent_s_Agency__c</fullName>
    <label>Unregistered Agent&apos;s Agency</label>
    <length>35</length>
    <type>Text</type>
</CustomField>