force-app/main/default/objects/Opportunity/fields/unregisteredAgentEmail__c.field-meta.xml
<CustomField>
    <fullName>unregisteredAgentEmail__c</fullName>
    <label>Unregistered Agent Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>