force-app/main/default/objects/Opportunity/fields/unregisteredAgentMobile__c.field-meta.xml
<CustomField>
    <fullName>unregisteredAgentMobile__c</fullName>
    <label>Unregistered Agent Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>