force-app/main/default/objects/Opportunity/fields/What_is_your_next_step__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_next_step__c</fullName>
    <label>What is your next step?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I&apos;m thinking about buying and want to know what I can afford</fullName>
            </value>
            <value>
                <fullName>I&apos;m house-hunting and want to be pre-approved</fullName>
            </value>
            <value>
                <fullName>I have found a home and I&apos;m waiting for my offer to be accepted</fullName>
            </value>
            <value>
                <fullName>I have found a home and my signed Offer to Purchase has been accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>