force-app/main/default/objects/Opportunity/recordTypes/Bond.recordType-meta.xml
<RecordType>
    <fullName>Bond</fullName>
    <active>true</active>
    <businessProcess>Bond Opportunity</businessProcess>
    <label>Bond Opportunity</label>
</RecordType>