force-app/main/default/objects/Opportunity/recordTypes/Duplicate_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Duplicate_Opportunity</fullName>
    <active>true</active>
    <businessProcess>General Opp</businessProcess>
    <label>Duplicate Opportunity</label>
</RecordType>