force-app/main/default/objects/Opportunity/recordTypes/Pre_Approval.recordType-meta.xml
<RecordType>
    <fullName>Pre_Approval</fullName>
    <active>false</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <label>Pre-Approval</label>
</RecordType>