force-app/main/default/objects/Opportunity/recordTypes/Pre_Approval_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Pre_Approval_Opportunity</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <label>Pre-Approval Opportunity</label>
</RecordType>