force-app/main/default/objects/Opportunity/recordTypes/Pre_qualification.recordType-meta.xml
<RecordType>
    <fullName>Pre_qualification</fullName>
    <active>false</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <label>Pre-qualification</label>
</RecordType>