force-app/main/default/objects/Opportunity/validationRules/FieldChangeNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>FieldChangeNotAllowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Name),
 (PRIORVALUE(Name) +&quot; - (Repeat)&quot; != Name)  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Opportunity Name field is not allowed to be updated.</errorMessage>
</ValidationRule>