force-app/main/default/objects/Opportunity/validationRules/LockGenOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>LockGenOpp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(Wrap_Up_Reason__c = &apos;Automated&apos;, false, true),
				IF(AND(PRIORVALUE(Wrap_Up_Reason__c) = &apos;Automated&apos;,Wrap_Up_Reason__c = &apos;Locked&apos;),false,true),
				ISPICKVAL(StageName,&quot;Pre-Approval&quot;),
				RecordType.Name = &apos;General Opportunity&apos;
			)</errorConditionFormula>
    <errorMessage>This opportunity is locked for editing due to current stage</errorMessage>
</ValidationRule>