force-app/main/default/objects/Opportunity/validationRules/Ready_For_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_For_Verification</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAl(PRIORVALUE(StageName),&quot;Ready For Validation&quot;) &amp;&amp; Information_Verified__c  &lt;&gt; True &amp;&amp; OR(ISPICKVAL(StageName,&quot;Closed Won&quot;),ISPICKVAL(StageName,&quot;Closed Lost&quot;))</errorConditionFormula>
    <errorMessage>Please verify captured information to continue.</errorMessage>
</ValidationRule>