force-app/main/default/objects/Opportunity/validationRules/RecordTypeNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordTypeNotEditable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),
				ISCHANGED(RecordTypeId))</errorConditionFormula>
    <errorMessage>The record type field is not allowed to be edited.</errorMessage>
</ValidationRule>