force-app/main/default/objects/Opportunity/validationRules/Wrap_Up_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Wrap_Up_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISCHANGED(StageName), ISCHANGED(Status__c)), NOT(ISCHANGED(Wrap_Up_Reason__c)), Wrap_Up_Reason__c &lt;&gt; &apos;Automated&apos;)</errorConditionFormula>
    <errorDisplayField>Wrap_Up_Reason__c</errorDisplayField>
    <errorMessage>You must complete a Wrap Up Reason</errorMessage>
</ValidationRule>