force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>BLG_Campaign__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>SLA_Deadline__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Reference_Number_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>