force-app/main/default/objects/Opportunity/listViews/Duplicate_Opportunities.listView-meta.xml
<ListView>
    <fullName>Duplicate_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Duplicate_Opportunity</value>
    </filters>
    <label>Duplicate Opportunities</label>
</ListView>